# ErrorEstimation

./: .gitignore  CMakeLists.txt  GoalOrientedH1.cpp  GoalOrientedMixed.cpp  GoalOrientedWell2D.cpp  PragerSynge.cpp  dependencyTest.cpp  errorEstimation.code-workspace  estimation2D.cpp  estimation3D.cpp  goalOrientedH1.cpp  goalOrientedMixed.cpp  goalOrientedMixed3D.cpp  goalOrientedMixedNew.cpp  goalOrientedPragerSynge.cpp  href3D.cpp  mesh3D_rev08_test.msh  mesh3Dtetra.msh  pragerSynge.cpp  test.cpp
Figures/: estimationPlot.py
Imput/: mesh3D.geo
Inputs/: well2D.geo  well2D.msh
Python/: adaptiveVsUniform.py
Utils/: CMakeLists.txt  MeshingUtils.cpp  MeshingUtils.h  RefinementUtils.cpp  RefinementUtils.h
